Fix memory leaks

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -603,42 +603,166 @@
                 "Entity": 4,
                 "Name": "Stairs"
             }
+        },
+        {
+            "Transform": {
+                "Entity": 3,
+                "LocalPosition": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "LocalRotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "LocalScale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Parent": 1048575,
+                "Position": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Tag": {
+                "Entity": 3,
+                "Name": "Camera"
+            }
+        },
+        {
+            "Camera": {
+                "Aspect": 1.7777777910232544,
+                "Entity": 3,
+                "Fov": 45.0,
+                "Framebuffer": {
+                    "ColorAttachments": [
+                        {
+                            "ExternalFormat": 3,
+                            "Filepath": "",
+                            "InternalFormat": 3,
+                            "MagFilter": 1,
+                            "MinFilter": 1,
+                            "WrapS": 1,
+                            "WrapT": 1
+                        }
+                    ],
+                    "DepthStencilFormat": 0,
+                    "Height": 2160,
+                    "IncludeDepthStencil": false,
+                    "Width": 3840
+                },
+                "ProjectionFarPlane": 100.0,
+                "ProjectionNearPlane": 0.5,
+                "ProjectionSize": {
+                    "X": 6.0,
+                    "Y": 3.0
+                },
+                "Zoom": 7.0
+            }
         }
     ],
     "EditorCamera": {
-        "Aspect": 1.7777777910232544,
-        "Components": null,
-        "Fov": 45.0,
-        "ProjectionFarPlane": 100.0,
-        "ProjectionNearPlane": 0.5,
-        "ProjectionSize": {
-            "X": 6.0,
-            "Y": 3.0
-        },
-        "Transform": {
-            "LocalPosition": {
-                "X": 0.0,
-                "Y": 0.0,
-                "Z": 0.0
+        "Components": [
+            {
+                "Transform": {
+                    "Entity": 0,
+                    "LocalPosition": {
+                        "X": 0.0,
+                        "Y": 0.0,
+                        "Z": 0.0
+                    },
+                    "LocalRotation": {
+                        "X": 0.0,
+                        "Y": 0.0,
+                        "Z": 0.0
+                    },
+                    "LocalScale": {
+                        "X": 1.0,
+                        "Y": 1.0,
+                        "Z": 1.0
+                    },
+                    "Parent": 1048575,
+                    "Position": {
+                        "X": 0.7250783443450928,
+                        "Y": -1.2250813245773315,
+                        "Z": 0.0
+                    },
+                    "Rotation": {
+                        "X": 0.0,
+                        "Y": 0.0,
+                        "Z": 0.0
+                    },
+                    "Scale": {
+                        "X": 1.0,
+                        "Y": 1.0,
+                        "Z": 1.0
+                    }
+                }
             },
-            "Parent": 1048575,
-            "Position": {
-                "X": 1.0027992725372314,
-                "Y": -0.9416933059692383,
-                "Z": 0.0
+            {
+                "Tag": {
+                    "Entity": 0,
+                    "Name": "New Entity"
+                }
             },
-            "Rotation": {
-                "X": 0.0,
-                "Y": 0.0,
-                "Z": 0.0
-            },
-            "Scale": {
-                "X": 1.0,
-                "Y": 1.0,
-                "Z": 1.0
+            {
+                "Camera": {
+                    "Aspect": 1.7777777910232544,
+                    "Entity": 0,
+                    "Fov": 45.0,
+                    "Framebuffer": {
+                        "ColorAttachments": [
+                            {
+                                "ExternalFormat": 3,
+                                "Filepath": "",
+                                "InternalFormat": 3,
+                                "MagFilter": 1,
+                                "MinFilter": 1,
+                                "WrapS": 1,
+                                "WrapT": 1
+                            },
+                            {
+                                "ExternalFormat": 6,
+                                "Filepath": "",
+                                "InternalFormat": 5,
+                                "MagFilter": 0,
+                                "MinFilter": 0,
+                                "WrapS": 0,
+                                "WrapT": 0
+                            }
+                        ],
+                        "DepthStencilFormat": 0,
+                        "Height": 2160,
+                        "IncludeDepthStencil": false,
+                        "Width": 3840
+                    },
+                    "ProjectionFarPlane": 100.0,
+                    "ProjectionNearPlane": 0.5,
+                    "ProjectionSize": {
+                        "X": 6.0,
+                        "Y": 3.0
+                    },
+                    "Zoom": 2.144307851791382
+                }
             }
-        },
-        "Zoom": 2.4113173484802246
+        ]
     },
     "Project": "C:\\Users\\Gabe\\Documents\\Coding\\CocoaProjects\\NewProject\\NewProject.cprj",
     "SceneHeirarchyOrder": [
@@ -696,6 +820,13 @@
             "Index": 7,
             "IsOpen": true,
             "Level": 1,
+            "Selected": false
+        },
+        {
+            "Id": 3,
+            "Index": 8,
+            "IsOpen": true,
+            "Level": 0,
             "Selected": false
         }
     ]
