Fix serialization of camera color

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -44,9 +44,9 @@
                 "AssetId": 4294967295,
                 "Color": {
                     "W": 1.0,
-                    "X": 1.0,
-                    "Y": 1.0,
-                    "Z": 0.6901960968971252
+                    "X": 0.9176470637321472,
+                    "Y": 0.9411764740943909,
+                    "Z": 0.8470588326454163
                 },
                 "Entity": 1048587,
                 "ZIndex": 0
@@ -122,9 +122,9 @@
                 "AssetId": 4294967295,
                 "Color": {
                     "W": 1.0,
-                    "X": 0.18213766813278198,
-                    "Y": 0.25977009534835815,
-                    "Z": 0.25977009534835815
+                    "X": 0.2549019753932953,
+                    "Y": 0.22745098173618317,
+                    "Z": 0.25882354378700256
                 },
                 "Entity": 1048586,
                 "ZIndex": 0
@@ -200,9 +200,9 @@
                 "AssetId": 4294967295,
                 "Color": {
                     "W": 1.0,
-                    "X": 0.18213766813278198,
-                    "Y": 0.25977009534835815,
-                    "Z": 0.25977009534835815
+                    "X": 0.2549019753932953,
+                    "Y": 0.22745098173618317,
+                    "Z": 0.25882354378700256
                 },
                 "Entity": 1048585,
                 "ZIndex": 0
@@ -278,9 +278,9 @@
                 "AssetId": 4294967295,
                 "Color": {
                     "W": 1.0,
-                    "X": 0.18213766813278198,
-                    "Y": 0.25977009534835815,
-                    "Z": 0.25977009534835815
+                    "X": 0.2549019753932953,
+                    "Y": 0.22745098173618317,
+                    "Z": 0.25882354378700256
                 },
                 "Entity": 1048584,
                 "ZIndex": 0
@@ -356,9 +356,9 @@
                 "AssetId": 4294967295,
                 "Color": {
                     "W": 1.0,
-                    "X": 0.18213766813278198,
-                    "Y": 0.25977009534835815,
-                    "Z": 0.25977009534835815
+                    "X": 0.2549019753932953,
+                    "Y": 0.22745098173618317,
+                    "Z": 0.25882354378700256
                 },
                 "Entity": 1048583,
                 "ZIndex": 0
@@ -434,9 +434,9 @@
                 "AssetId": 4294967295,
                 "Color": {
                     "W": 1.0,
-                    "X": 0.18213766813278198,
-                    "Y": 0.25977009534835815,
-                    "Z": 0.25977009534835815
+                    "X": 0.2549019753932953,
+                    "Y": 0.22745098173618317,
+                    "Z": 0.25882354378700256
                 },
                 "Entity": 1048582,
                 "ZIndex": 0
@@ -512,9 +512,9 @@
                 "AssetId": 4294967295,
                 "Color": {
                     "W": 1.0,
-                    "X": 0.18213766813278198,
-                    "Y": 0.25977009534835815,
-                    "Z": 0.25977009534835815
+                    "X": 0.2549019753932953,
+                    "Y": 0.22745098173618317,
+                    "Z": 0.25882354378700256
                 },
                 "Entity": 5,
                 "ZIndex": 0
@@ -624,8 +624,8 @@
                 },
                 "Parent": 1048575,
                 "Position": {
-                    "X": 0.0,
-                    "Y": 0.0,
+                    "X": 2.985827922821045,
+                    "Y": -0.2997952103614807,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -649,6 +649,11 @@
         {
             "Camera": {
                 "Aspect": 1.7777777910232544,
+                "ClearColor": {
+                    "X": 0.12156862765550613,
+                    "Y": 0.12156862765550613,
+                    "Z": 0.16078431904315948
+                },
                 "Entity": 3,
                 "Fov": 45.0,
                 "Framebuffer": {
@@ -674,7 +679,7 @@
                     "X": 6.0,
                     "Y": 3.0
                 },
-                "Zoom": 7.0
+                "Zoom": 3.0
             }
         }
     ],
@@ -700,8 +705,8 @@
                     },
                     "Parent": 1048575,
                     "Position": {
-                        "X": 0.7250783443450928,
-                        "Y": -1.2250813245773315,
+                        "X": 3.6043033599853516,
+                        "Y": -2.571568250656128,
                         "Z": 0.0
                     },
                     "Rotation": {
@@ -725,6 +730,11 @@
             {
                 "Camera": {
                     "Aspect": 1.7777777910232544,
+                    "ClearColor": {
+                        "X": 0.44999998807907104,
+                        "Y": 0.550000011920929,
+                        "Z": 0.6000000238418579
+                    },
                     "Entity": 0,
                     "Fov": 45.0,
                     "Framebuffer": {
@@ -759,7 +769,7 @@
                         "X": 6.0,
                         "Y": 3.0
                     },
-                    "Zoom": 2.144307851791382
+                    "Zoom": 3.855879545211792
                 }
             }
         ]
@@ -771,7 +781,7 @@
             "Index": 0,
             "IsOpen": true,
             "Level": 0,
-            "Selected": false
+            "Selected": true
         },
         {
             "Id": 1048586,
