Vastly improved cpp parsing and added minor tests to ensure number and string literals are parsed correctly

--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -7,8 +7,8 @@
             "Transform": {
                 "Entity": 1048587,
                 "LocalPosition": {
-                    "X": 0.0,
-                    "Y": 0.0,
+                    "X": -1.4669525623321533,
+                    "Y": 0.02176487445831299,
                     "Z": 0.0
                 },
                 "LocalRotation": {
@@ -44,9 +44,9 @@
                 "AssetId": 4294967295,
                 "Color": {
                     "W": 1.0,
-                    "X": 0.9176470637321472,
-                    "Y": 0.9411764740943909,
-                    "Z": 0.8470588326454163
+                    "X": 0.857471227645874,
+                    "Y": 0.31342053413391113,
+                    "Z": 0.31342053413391113
                 },
                 "Entity": 1048587,
                 "ZIndex": 0
@@ -85,8 +85,8 @@
             "Transform": {
                 "Entity": 1048586,
                 "LocalPosition": {
-                    "X": 0.0,
-                    "Y": 0.0,
+                    "X": 0.8955097794532776,
+                    "Y": -4.267094612121582,
                     "Z": 0.0
                 },
                 "LocalRotation": {
@@ -608,8 +608,8 @@
             "Transform": {
                 "Entity": 3,
                 "LocalPosition": {
-                    "X": 0.0,
-                    "Y": 0.0,
+                    "X": 1.1773667335510254,
+                    "Y": -1.0818331241607666,
                     "Z": 0.0
                 },
                 "LocalRotation": {
@@ -618,14 +618,14 @@
                     "Z": 0.0
                 },
                 "LocalScale": {
-                    "X": 1.0,
-                    "Y": 1.0,
-                    "Z": 1.0
+                    "X": 0.5262885093688965,
+                    "Y": 0.0,
+                    "Z": 0.0
                 },
                 "Parent": 1048575,
                 "Position": {
-                    "X": 2.985827922821045,
-                    "Y": -0.2997952103614807,
+                    "X": 1.1773667335510254,
+                    "Y": -1.0818331241607666,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -679,7 +679,19 @@
                     "X": 6.0,
                     "Y": 3.0
                 },
-                "Zoom": 3.0
+                "Zoom": 2.0
+            }
+        },
+        {
+            "CameraScript": {
+                "Entity": 3
+            }
+        },
+        {
+            "PlayerScript": {
+                "Entity": 1048587,
+                "PlayerJumpBoost": 70.0,
+                "PlayerSpeed": 80.0
             }
         }
     ],
@@ -705,8 +717,8 @@
                     },
                     "Parent": 1048575,
                     "Position": {
-                        "X": 3.6043033599853516,
-                        "Y": -2.571568250656128,
+                        "X": 3.5820393562316895,
+                        "Y": -0.616276741027832,
                         "Z": 0.0
                     },
                     "Rotation": {
@@ -769,7 +781,7 @@
                         "X": 6.0,
                         "Y": 3.0
                     },
-                    "Zoom": 3.855879545211792
+                    "Zoom": 3.6361329555511475
                 }
             }
         ]
@@ -777,66 +789,66 @@
     "Project": "C:\\Users\\Gabe\\Documents\\Coding\\CocoaProjects\\NewProject\\NewProject.cprj",
     "SceneHeirarchyOrder": [
         {
-            "Id": 1048587,
+            "Id": 3,
             "Index": 0,
             "IsOpen": true,
             "Level": 0,
             "Selected": true
         },
         {
-            "Id": 1048586,
+            "Id": 1048587,
             "Index": 1,
             "IsOpen": true,
             "Level": 0,
             "Selected": false
         },
         {
-            "Id": 4,
+            "Id": 1048586,
             "Index": 2,
             "IsOpen": true,
             "Level": 0,
             "Selected": false
         },
         {
-            "Id": 1048582,
+            "Id": 4,
             "Index": 3,
             "IsOpen": true,
-            "Level": 1,
+            "Level": 0,
             "Selected": false
         },
         {
-            "Id": 1048583,
+            "Id": 1048582,
             "Index": 4,
             "IsOpen": true,
             "Level": 1,
             "Selected": false
         },
         {
-            "Id": 1048584,
+            "Id": 1048583,
             "Index": 5,
             "IsOpen": true,
             "Level": 1,
             "Selected": false
         },
         {
-            "Id": 1048585,
+            "Id": 1048584,
             "Index": 6,
             "IsOpen": true,
             "Level": 1,
             "Selected": false
         },
         {
-            "Id": 5,
+            "Id": 1048585,
             "Index": 7,
             "IsOpen": true,
             "Level": 1,
             "Selected": false
         },
         {
-            "Id": 3,
+            "Id": 5,
             "Index": 8,
             "IsOpen": true,
-            "Level": 0,
+            "Level": 1,
             "Selected": false
         }
     ]
