--- a/CocoaEditor/assets/tmp.jade
+++ b/CocoaEditor/assets/tmp.jade
@@ -793,7 +793,7 @@
             "Index": 0,
             "IsOpen": true,
             "Level": 0,
-            "Selected": true
+            "Selected": false
         },
         {
             "Id": 1048587,
